fixed the whole site width on mobiles

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -18,7 +18,7 @@ a {
 
 @layer components {
   .container {
-    @apply max-w-[460px] sm:max-w-[600px] md:max-w-[700px] lg:max-w-[950px] xl:max-w-[1024px];
+    @apply max-w-[390px] sm:max-w-[600px] md:max-w-[700px] lg:max-w-[950px] xl:max-w-[1024px];
   }
 }
 body {
